--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
     "deploy": "firebase deploy --only functions"
   },
   "dependencies": {
+    "@simplewebauthn/server": "^13.2.2",
     "cors": "^2.8.5",
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.4.1"
