--- a/firebase.json
+++ b/firebase.json
@@ -15,7 +15,7 @@
       "**/.*",
       "**/node_modules/**",
       "functions/**",
-      "carga - usuarios/**",
+      "carga-usuarios/**",
       "tools/**",
       "docs/**"
     ],
@@ -28,7 +28,12 @@
     "headers": [
       {
         "source": "/asistente-ia/**",
-        "headers": [{ "key": "Cache-Control", "value": "no-store" }]
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-store"
+          }
+        ]
       },
       {
         "source": "**/*.@(jpg|jpeg|gif|png|webp|svg|css|js)",
@@ -38,23 +43,34 @@
             "value": "public, max-age=31536000, immutable"
           }
         ]
-      },
-      {
-        "source": "**/*.html",
-        "headers": [{ "key": "Cache-Control", "value": "no-cache" }]
-      },
-      {
-        "source": "/service-worker.js",
-        "headers": [{ "key": "Cache-Control", "value": "no-cache" }]
-      },
-      {
-        "source": "/app/service-worker.js",
-        "headers": [{ "key": "Cache-Control", "value": "no-cache" }]
-      },
-      {
-        "source": "/app/manifest.json",
-        "headers": [{ "key": "Cache-Control", "value": "no-cache" }]
       }
     ]
+  },
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "ui": {
+      "port": 4000
+    },
+    "hub": {
+      "port": 4400
+    },
+    "logging": {
+      "port": 4500
+    },
+    "auth": {
+      "port": 9099
+    },
+    "hosting": {
+      "port": 5002
+    },
+    "storage": {
+      "port": 9199
+    },
+    "singleProjectMode": true
   }
 }
